bug fixe: lora support and led setup in dts file

--- a/prj.conf
+++ b/prj.conf
@@ -6,11 +6,12 @@ CONFIG_UART_CONSOLE=y
 CONFIG_GPIO=y
 CONFIG_SPI=y
 
+# LoRa Support
+CONFIG_LORA=y
+
 # LoraWAN Support
 CONFIG_LORAWAN=y
 CONFIG_LORAMAC_REGION_EU868=y
-CONFIG_LORAWAN_APP_CLOCK_SYNC=n
-CONFIG_LORAWAN_SERVICES=n
 CONFIG_LORAWAN_SYSTEM_MAX_RX_ERROR=200
 
 # Flash Memory Support
