--- a/prj.conf
+++ b/prj.conf
@@ -26,3 +26,7 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
 # Random Number Generation Support
 CONFIG_TEST_RANDOM_GENERATOR=y
+
+# ZCBOR Libraries Support
+CONFIG_ZCBOR=y
+CONFIG_ZTEST_STACK_SIZE=4096
