--- a/prj.conf
+++ b/prj.conf
@@ -9,10 +9,11 @@ CONFIG_SPI=y
 # LoRa Support
 CONFIG_LORA=y
 
-# LoraWAN Support
+# LoRaWAN Support
 CONFIG_LORAWAN=y
 CONFIG_LORAMAC_REGION_EU868=y
-CONFIG_LORAWAN_SYSTEM_MAX_RX_ERROR=200
+CONFIG_LORAWAN_SYSTEM_MAX_RX_ERROR=90
+#200
 
 # Flash Memory Support
 CONFIG_NVS=y
